[package]
name = "kmdparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
uniffi = { version = "0.26.1" }

[lib]
crate-type = ["staticlib", "lib"]
name = "kmdparse"

[dev-dependencies]
nom-test-helpers = "6.1.3"
rayon = "1.8.0"

[build-dependencies]
uniffi = { version = "0.26.1", features = [ "build" ] }

[features]
# uniffi = ["dep:uniffi"]
uniffi = []